Set nav menu to higher z-index to hopefully prevent overlapping

--- a/vteach/css/main.css
+++ b/vteach/css/main.css
@@ -174,7 +174,8 @@ html {
 
 .site-nav {
   float: right;
-  line-height: 56px; }
+  line-height: 56px;
+  z-index: 999; }
   .site-nav .menu-icon {
     display: none; }
   .site-nav .page-link {
